<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/mbackdrop"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/colorYellow"
            android:contentDescription="@string/background_movie"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/background_movie"
            android:adjustViewBounds="true"
            android:src="@drawable/bg_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

        <ImageView
            android:id="@+id/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_1"
            app:layout_constraintBottom_toBottomOf="@+id/Like"
            app:layout_constraintStart_toStartOf="@+id/Like"
            app:layout_constraintTop_toTopOf="@+id/Like"
            android:contentDescription="@string/border" />

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/border"
            android:src="@drawable/ic_rectangle_2"
            app:layout_constraintBottom_toBottomOf="@+id/Like"
            app:layout_constraintEnd_toEndOf="@+id/border"
            app:layout_constraintTop_toTopOf="@+id/Like" />


        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="@id/rectangle"
            app:layout_constraintBottom_toBottomOf="@+id/Like"
            app:layout_constraintStart_toEndOf="@+id/Like"
            app:layout_constraintTop_toTopOf="@id/Like"
            app:mfb_type="heart" />

        <ImageView
            android:id="@+id/line_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/line_white"
            android:src="@drawable/ic_line3hdpi"
            app:layout_constraintTop_toTopOf="@id/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="387dp" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="240dp"
            android:layout_marginTop="35dp"
            android:elevation="20dp"
            android:contentDescription="@string/poster_movie"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorAccent"/>


        <TextView
            android:id="@+id/Like"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/like"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/overview"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="1dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/overview"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/whiteSpace"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textgen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/release"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Like" />

        <TextView
            android:id="@+id/release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/release"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textgen" />
        <TextView
            android:id="@+id/textgen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/genres_label"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/release"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textgen2" />

        <ImageView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/vote"
            android:src="@drawable/ic_people_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/line_white"
            app:layout_constraintBottom_toTopOf="@id/line_white"/>

        <TextView
            android:id="@+id/tv_item_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/vote"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_public_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/line_white"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:contentDescription="@string/language" />

        <TextView
            android:id="@+id/tv_item_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/language"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_star_black"
            app:layout_constraintBottom_toTopOf="@+id/line_white"
            app:layout_constraintEnd_toEndOf="@+id/line_white"
            android:contentDescription="@string/rating" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/rating"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4D000000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/name_title"
            android:textAlignment="center"
            android:textColor="@color/colorYellow"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <!--for_whitespace -->
        <TextView
            android:id="@+id/whiteSpace"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>